# Robothon-starter

assets/Master/: constructor_bricklaying_4uhswqbp.xml
submissions/adaptive_master_grasp/: .gitignore  PR_DESCRIPTION.md  README.md  registration.json  run.py
submissions/adaptive_master_grasp/artifacts/: contact_metrics.json  ff_master_bottle_demo_scene.xml
submissions/bricklaying/: .gitignore  MUJOCO_LOG.TXT  README.md  judge_brief.md  pyproject.toml  registration.json  rubric_mapping.md  scorecard.json  self_assessment.md
submissions/bricklaying/examples/: tiny_house_plan.yaml
submissions/bricklaying/src/constructor_robot/: __init__.py  __main__.py  assignment.py  bricklaying.py  plan.py  sim.py  video.py
submissions/bricklaying/src/constructor_robot/assets/: __init__.py  construction_site.xml
submissions/micro_suture_lab/: PR_DESCRIPTION.md  README.md  evaluation_report.json  make_plots.py  micro_suture_scene.xml  registration.json  requirements.txt  run.sh  run_micro_suture_lab.py  tune_gains.py
submissions/micro_suture_lab/artifacts/: contact_timeline.json  evaluation.json  policy_card.json  report.json  submission_manifest.json  trajectory.json
