[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "constructor-robot"
version = "0.1.0"
description = "MuJoCo construction co-working robot demo"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "PyYAML>=6.0",
]

[project.optional-dependencies]
sim = [
  "imageio>=2.34.0",
  "imageio-ffmpeg>=0.5.0",
  "mujoco>=3.2.0",
]
dev = [
  "pytest>=8.0",
]

[project.scripts]
constructor-robot = "constructor_robot.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
constructor_robot = ["assets/*.xml"]
